# shadow-of-war-save-editor

./: .gitignore  CMakeLists.txt  README.md
data/: data_extractor.py  role_data.txt  roles.csv  save_dump.sav
saves/: web.json
src/: hook.hpp  linked_list.hpp  main.cpp  memory.hpp  script_var.hpp
